# python-essentials

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  example.py  linting.py  pyproject.toml  run.sh  sample_setup.cfg  setup.cfg  setup.py  test_mypy.py  update_pyproject_version.py
.github/workflows/: demo_pylint  demo_workflow_pylint  pre_commit.yml  publish.yaml
packaging_demo/: __main__.py  my_file.py  my_other_file.py  states_info.py
packaging_demo/my_folder/: cities.json  my_nested_file.py
packaging_demo/my_folder/sub_package/: __init__.py  some_deeply_nested_file.py
ruff_mypy/: .black.toml  check_code_quality.sh  generic_variance.py  linting.py  pre-commit  t1.py
tests/: test_states_info.py
